<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/admin_setting"
    android:nextFocusForward="@id/admin_setting">

    <EditText
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:inputType="textNoSuggestions"
        android:background="@color/colorPrimary"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textColor="@android:color/background_light"
        android:paddingLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/client_file_hint"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/hintLoginColor"
        android:id="@+id/client_file"
        android:imeOptions="actionDone"
        />

    <Button
        android:text="@string/uploadClient"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/client_file"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonColor"
        android:id="@+id/client_button"/>

    <EditText
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:inputType="textNoSuggestions"
        android:background="@color/colorPrimary"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textColor="@android:color/background_light"
        android:paddingLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/flight_file_hint"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/hintLoginColor"
        android:layout_below="@+id/client_button"
        android:id="@+id/flight_file"
        android:imeOptions="actionDone"
        />

    <Button
        android:text="@string/uploadFlight"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flight_file"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonColor"
        android:id="@+id/flight_button" />

</RelativeLayout>