<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/Login_Main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.Login">

    <View
        android:id="@+id/centerView"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:background="@color/colorPrimary"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textColor="@android:color/background_light"
        android:layout_above="@+id/loginPassword"
        android:paddingLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/loginEmailHint"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/hintLoginColor"
        android:id="@+id/loginEmail"
        android:nextFocusDown="@id/loginPassword"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textColor="@android:color/background_light"
        android:paddingLeft="10dp"
        android:hint="@string/loginPasswordHint"
        android:textColorHint="@color/hintLoginColor"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/centerView"
        android:layout_marginBottom="25dp"
        android:id="@+id/loginPassword"
        android:nextFocusForward="@layout/login"
        />

    <Button
        android:text="@string/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerView"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonColor"
        android:onClick="tryLogin"
        android:id="@+id/button" />

</RelativeLayout>
